[gd_scene load_steps=11 format=3 uid="uid://cu1mjvdukin1e"]

[ext_resource type="Script" uid="uid://c4wapmq4y26b" path="res://scenes/stages/the_mirror.gd" id="1_3ocln"]
[ext_resource type="Texture2D" uid="uid://pvlb11vkmvkh" path="res://assets/stages/cumFunkinTest314159265358979323846264/silly_mirror.png" id="2_s24q8"]
[ext_resource type="Texture2D" uid="uid://cv38ip2dsexrj" path="res://assets/stages/cumFunkinTest314159265358979323846264/broken_mirror.png" id="3_cbgg8"]
[ext_resource type="AudioStream" uid="uid://bd4hjcv3ipeue" path="res://assets/sounds/mirror_break.ogg" id="4_i0qok"]
[ext_resource type="SpriteFrames" path="res://assets/stages/cumFunkinTest314159265358979323846264/bgAssets.res" id="4_i6gge"]
[ext_resource type="VideoStream" uid="uid://d0cuflplq5f1l" path="res://assets/songs/silly-billy/extraAssets/SO_STAY_FINAL.mp4" id="5_3ocln"]
[ext_resource type="Shader" uid="uid://b46agxupygiiu" path="res://scenes/stages/BLU.gdshader" id="6_x3y2m"]

[sub_resource type="Shader" id="Shader_3ocln"]
code = "shader_type canvas_item;
uniform float progress = 0.0;
void fragment() {
	COLOR.rgb = mix(COLOR.rgb,vec3(1.0),progress);
	// Called for every pixel the material is visible on.
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3y2m"]
shader = SubResource("Shader_3ocln")
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i0qok"]
shader = ExtResource("6_x3y2m")

[node name="Stage" type="Node2D" node_paths=PackedStringArray("field", "camera", "player", "cpu", "speaker")]
script = ExtResource("1_3ocln")
field = NodePath("CumInMyFunkin/SillyMirror/Parallax2D/field")
zoom = 0.725
camera = NodePath("Camera")
player = NodePath("player")
cpu = NodePath("cpu")
speaker = NodePath("speaker")

[node name="CumInMyFunkin" type="Node2D" parent="."]

[node name="SillyMirror" type="Sprite2D" parent="CumInMyFunkin"]
texture = ExtResource("2_s24q8")
centered = false

[node name="BreakCore" type="Sprite2D" parent="CumInMyFunkin/SillyMirror"]
visible = false
material = SubResource("ShaderMaterial_x3y2m")
texture = ExtResource("3_cbgg8")
centered = false

[node name="Parallax2D" type="Parallax2D" parent="CumInMyFunkin/SillyMirror"]

[node name="field" type="Node2D" parent="CumInMyFunkin/SillyMirror/Parallax2D"]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(901, 1213)
scale = Vector2(1.2, 1.2)

[node name="glass break" type="AudioStreamPlayer" parent="CumInMyFunkin/SillyMirror"]
stream = ExtResource("4_i0qok")
volume_db = 6.0
bus = &"SFX"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CumInMyFunkin"]
z_index = 1
sprite_frames = ExtResource("4_i6gge")
animation = &"Silly_floor"
centered = false
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CumInMyFunkin"]
z_index = 1
sprite_frames = ExtResource("4_i6gge")
animation = &"Silly_idk_1"
centered = false
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="CumInMyFunkin"]
z_index = 1
sprite_frames = ExtResource("4_i6gge")
animation = &"Silly_idk_2"
centered = false
metadata/_edit_lock_ = true

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(1742, 1050)
position_smoothing_enabled = true
position_smoothing_speed = 2.4
editor_draw_screen = false

[node name="player" type="Marker2D" parent="."]
position = Vector2(2080, 1756)

[node name="speaker" type="Marker2D" parent="."]
position = Vector2(7637, 3861)

[node name="cpu" type="Marker2D" parent="."]
position = Vector2(1270, 1495)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 0

[node name="black" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="cut" type="VideoStreamPlayer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("5_3ocln")
volume_db = -80.0

[node name="blu" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="blu"]
material = SubResource("ShaderMaterial_i0qok")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
